<resources>
    <string name="app_name">PESandroid</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="mail_address">Mail address</string>
    <string name="title_login">EETAC Mail - Login</string>
    <string name="still_without_account">Still without account?</string>
    <string name="register_title">EETAC Mail - Sign up</string>
    <string name="delete_acc">Delete Account</string>
    <string name="show_inbox">Show inbox:</string>
    <string name="more_options">More options:</string>
    <string name="delete_account">Delete Account</string>
    <string name="button">Button</string>
    <string-array name="inboxSelect">
        <item>Main</item>
        <item>Spam</item>
        <item>Sent</item>
    </string-array>
    <string-array name="inboxOptions">
        <item>Select</item>
        <item>New message</item>
        <item>Log out</item>
        <item>Update profile</item>
        <item>Delete account</item>
    </string-array>
</resources>
